# ddog-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  release-plz.toml
.github/workflows/: ci.yml  coverage.yml  release.yml  rust-build-matrix.yml
src/: client.rs  config.rs  error.rs  lib.rs  limits.rs  log.rs  main.rs  output.rs  time.rs
src/commands/: apm.rs  dashboards.rs  downtimes.rs  events.rs  hosts.rs  incidents.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  notebooks.rs  rum.rs  services.rs  slos.rs  spans.rs  synthetics.rs  traces.rs
tests/: contract_tests.rs  surface_tests.rs
