[package]
name = "ddog"
version = "0.1.0"
edition = "2024"
description = "A lightweight CLI for querying Datadog — logs, metrics, traces, APM, and more"
license = "MIT"

[lib]
name = "ddog"
path = "src/lib.rs"

[[bin]]
name = "ddog"
path = "src/main.rs"

[features]
default = []
unsupported-commands = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
